Implemented CountriesRepository (the data source)
Interacts with the GraphQL API (URI configurable in appsettings.json).

--- a/backend/appsettings.json
+++ b/backend/appsettings.json
@@ -6,5 +6,6 @@
     }
   },
   "AllowedHosts": "*",
+  "GraphQLURI":"https://countries.trevorblades.com/graphql",
   "EnableHttpsRedirection": false
 }
