--- a/backend/backend.csproj
+++ b/backend/backend.csproj
@@ -1,15 +1,20 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
-
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
-
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.0" />
-    <PackageReference Include="Microsoft.Extensions.Configuration" Version="7.0.0" />
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+    <PackageReference Include="GraphQL.Client" Version="6.0.0"/>
+    <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.0"/>
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="7.0.0"/>
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0"/>
+    <PackageReference Include="GraphQL.Client.Serializer.Newtonsoft" Version="6.0.0"/>
+    <PackageReference Include="GraphQL.Primitives" Version="6.0.0"/>
+    <PackageReference Include="GraphQL.Client.Serializer.SystemTextJson" Version="6.0.0"/>
+    <PackageReference Include="GraphQL.Client.Abstractions" Version="6.0.0"/>
+    <PackageReference Include="GraphQL.Client.Abstractions.Websocket" Version="6.0.0"/>
+    <PackageReference Include="GraphQL.Client.LocalExecution" Version="6.0.0"/>
+    <PackageReference Include="modernhttpclient" Version="2.4.2"/>
   </ItemGroup>
-
 </Project>
